// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rdme validate GHA onboarding E2E tests should create GHA workflow if user passes in spec via opt (github flag enabled) 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/validate-test-opt-spec-github-file.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme validate GHA onboarding E2E tests should create GHA workflow if user passes in spec via opt (github flag enabled) 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`validate-test-opt-spec-github-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - validate-test-opt-spec-github-branch

jobs:
  rdme-validate:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`validate\` command 🚀
        uses: readmeio/rdme@7.5.0
        with:
          rdme: validate __tests__/__fixtures__/petstore-simple-weird-version.json
"
`;

exports[`rdme validate GHA onboarding E2E tests should create GHA workflow if user passes in spec via opt (including workingDirectory) 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/validate-test-opt-spec-workdir-file.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme validate GHA onboarding E2E tests should create GHA workflow if user passes in spec via opt (including workingDirectory) 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`validate-test-opt-spec-github-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - validate-test-opt-spec-github-branch

jobs:
  rdme-validate:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`validate\` command 🚀
        uses: readmeio/rdme@7.5.0
        with:
          rdme: validate petstore.json --workingDirectory=./__tests__/__fixtures__/relative-ref-oas
"
`;

exports[`rdme validate GHA onboarding E2E tests should create GHA workflow if user passes in spec via opt 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/validate-test-opt-spec-file.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme validate GHA onboarding E2E tests should create GHA workflow if user passes in spec via opt 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`validate-test-opt-spec-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - validate-test-opt-spec-branch

jobs:
  rdme-validate:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`validate\` command 🚀
        uses: readmeio/rdme@7.5.0
        with:
          rdme: validate __tests__/__fixtures__/petstore-simple-weird-version.json
"
`;

exports[`rdme validate GHA onboarding E2E tests should create GHA workflow if user passes in spec via prompts 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/validate-test-file.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme validate GHA onboarding E2E tests should create GHA workflow if user passes in spec via prompts 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`validate-test-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - validate-test-branch

jobs:
  rdme-validate:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`validate\` command 🚀
        uses: readmeio/rdme@7.5.0
        with:
          rdme: validate __tests__/__fixtures__/petstore-simple-weird-version.json
"
`;

exports[`rdme validate error handling should throw an error if an invalid OpenAPI 3.1 definition is supplied 1`] = `
[SyntaxError: OpenAPI schema validation failed.

REQUIRED must have required property 'name'

  24 |   "components": {
  25 |     "securitySchemes": {
> 26 |       "tlsAuth": {
     |                  ^ ☹️  name is missing here!
  27 |         "type": "mutualTLS"
  28 |       }
  29 |     }]
`;

exports[`rdme validate error handling should throw an error if an invalid Swagger definition is supplied 1`] = `
[SyntaxError: Swagger schema validation failed.

ADDITIONAL PROPERTY must NOT have additional properties

  23 |         "description": "Find out more",
  24 |         "url": "http://swagger.io",
> 25 |         "this-shouldnt-be-here": true
     |         ^^^^^^^^^^^^^^^^^^^^^^^ 😲  this-shouldnt-be-here is not expected to be here!
  26 |       }
  27 |     }
  28 |   ],]
`;
